static/assets/css/stylesheet.css
/*******************************************************************************
MeyerWeb Reset
*******************************************************************************/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  vertical-align: baseline;
}


/* HTML5 display-role reset for older browsers */

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}

ol,
ul {
  list-style: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}


/*******************************************************************************
Theme Styles (based on Slate Theme for GitHub Pages by Jason Costello,
@jsncostello)
*******************************************************************************/

body {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  color: #373737;
  background: #f2f2f2;
  font-family: "Capriola", "Roboto", Arial, sans-serif;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  max-width: 100%;
  max-height: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 10px 0;
  font-weight: 700;
  font-family: "Capriola", "Roboto", Arial, sans-serif;
  letter-spacing: -1px;
}

h1 {
  font-size: 36px;
  font-weight: 700;
}

h2 {
  padding-bottom: 0;
  margin-bottom: 20px;
  font-size: 32px;
  border-bottom: 2px dotted #CCCCCC;
}

h3 {
  font-size: 24px;
}

h4 {
  font-size: 21px;
}

h5 {
  font-size: 18px;
}

h6 {
  font-size: 16px;
}

p {
  margin: 10px 0 15px 0;
}

center {
  font-family: "Capriola", "Roboto", Arial, sans-serif;
  line-height: 1.5;
}

footer p {
  color: #f2f2f2;
}

a {
  text-decoration: none;
  color: black;
  text-shadow: none;
  transition: color 0.5s ease;
  transition: text-shadow 0.5s ease;
  -webkit-transition: color 0.5s ease;
  -webkit-transition: text-shadow 0.5s ease;
  -moz-transition: color 0.5s ease;
  -moz-transition: text-shadow 0.5s ease;
  -o-transition: color 0.5s ease;
  -o-transition: text-shadow 0.5s ease;
  -ms-transition: color 0.5s ease;
  -ms-transition: text-shadow 0.5s ease;
  cursor: pointer;
}

a.email-us-link {
  color: rgb(63, 63, 224);
} 

a:hover,
a:focus {
  text-decoration: underline;
  color: darkolivegreen;
}

footer a {
  color: white; 
}

footer a:active, footer a:hover {
  color: white;
  text-decoration: underline;
}

em {
  font-style: italic;
}

strong {
  font-weight: bold;
}

p img {
  display: inline;
  margin: 0;
  padding: 0;
  vertical-align: middle;
  text-align: center;
  border: none;
}

blockquote {
  color: #666;
  margin-bottom: 20px;
  padding: 0 0 0 20px;
  border-left: 3px solid #bbb;
}

ul, ol {
  margin-bottom: 15px
}

ul {
  list-style-position: inside;
  list-style: disc;
  padding-left: 20px;
}

ol {
  list-style-position: inside;
  list-style: decimal;
  padding-left: 20px;
}

hr {
  height: 1px;
  margin-bottom: 5px;
  border: none;
  background: url('../images/bg_hr.png') repeat-x center;
}

table {
  border: 1px solid #373737;
  margin-bottom: 20px;
  text-align: left;
}

th {
  font-family: "Capriola", "Roboto", Arial, sans-serif;
  padding: 10px;
  background: #373737;
  color: #fff;
}

td {
  padding: 10px;
  border: 1px solid #373737;
}

form {
  background: #f2f2f2;
  padding: 20px;
}

/*******************************************************************************
Full-Width Styles
*******************************************************************************/

.outer {
  width: 100%;
}

.inner {
  position: relative;
  padding: 20px 10px;
  margin: 0 auto;
}

.main-content {
  boxing-size: border-box;
  clear: both;
  margin: 0 auto;
  padding-bottom: 20px;
  position: relative;
  width: 67%;
}

.row:before,
.row:after {
  content: "";
  display: table;
  clear: both;
}

.column {
  display: block;
  float: left;
}

.oppia-foundation-blockquote {
  border: 0;
  color: black;
  margin: 0;
  padding: 0;
}

.oppia-foundation-clearfix {
  overflow: auto;
  zoom: 1;
}

.oppia-foundation-no-margin {
  margin: 0;
}

.oppia-foundation-no-padding {
  padding :0;
}

.oppia-foundation-no-horizontal-padding {
  padding-left: 0;
  padding-right: 0;
}

.oppia-foundation-button-horizontal-padding {
  padding-left: 20px;
  padding-right: 20px;
}

.oppia-foundation-right-padding {
  padding-right: 40px;
}

.oppia-foundation-horizontal-padding {
  padding-left: 40px;
  padding-right: 40px;
}

@media screen and (min-width: 599px) {
  .oppia-foundation-conditional-horizontal-padding {
    padding-left: 40px;
    padding-right: 40px;
  }
  .oppia-foundation-tablet-and-desktop-horizontal-padding {
    padding-left: 40px;
    padding-right: 40px;
  }
}

.oppia-foundation-top-padding {
  padding-top: 40px;
}

.oppia-foundation-vertical-padding {
  padding-top: 40px;
  padding-bottom: 40px;
}

@media screen and (min-width: 599px) {
  .oppia-foundation-conditional-vertical-padding {
    padding-top: 40px;
    padding-bottom: 40px;
  }
  .oppia-foundation-tablet-and-desktop-vertical-padding {
    padding-top: 40px;
    padding-bottom: 40px;
  }
}

@media screen and (max-width: 1279px) {
  .oppia-foundation-mobile-and-tablet-vertical-padding {
    padding-top: 40px;
    padding-bottom: 40px;
  }
}

@media screen and (max-width: 599px) {
  .oppia-foundation-mobile-vertical-padding {
    padding-top: 40px;
    padding-bottom: 40px;
  }
  .oppia-foundation-mobile-left-padding {
    padding-left: 40px;
  }
}

.oppia-foundation-bottom-padding {
  padding-bottom: 40px;
}

.oppia-foundation-gray-background {
  background-color: #F4F4F4;
}

.oppia-foundation-green-background {
  background-color: #18AA9D;
}

.oppia-foundation-white-background {
  background-color: white;
}

.oppia-foundation-black-text{
  color: black;
}

.oppia-foundation-green-text {
  color: #18AA9D;
}

.oppia-foundation-white-text {
  color: white;
}

.oppia-foundation-bold-text {
  font-weight: bold;
}

.oppia-foundation-italic-text {
  font-style: italic;
}

.oppia-foundation-uppercase-text {
  text-transform: uppercase;
}

.oppia-foundation-center-align-text {
  text-align: center;
}

.oppia-foundation-left-align-text {
  text-align: left;
}

.md-button.oppia-foundation-gold-border-button {
  border: 3px outset goldenrod;
  min-width: 200px;
  max-width: 250px;
  max-height: 50px;
  opacity: 1;
}

.md-button.oppia-foundation-gold-border-button:hover,
.md-button.oppia-foundation-gold-border-button:focus {
  background-color: rgba(255,255,255,1);
  color: #05a69a;
}

.md-button:not([disabled]).md-focused.oppia-foundation-gold-border-button {
  background-color: rgba(255,255,255,1);
}

.md-button.oppia-foundation-white-button {
  background-color: rgba(255,255,255,1);
  -webkit-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
  color: #18AA9D;
  padding: 0px 15px;
  max-width: 250px;
  max-height: 50px;
}

.md-button.oppia-foundation-white-button:hover,
.md-button.oppia-foundation-white-button:focus {
  background-color: #18AA9D;
  color: rgba(255,255,255,1);
}

.md-button.oppia-foundation-scroll-to-top-button {
  cursor: pointer;
  position: fixed !important;
  padding: 0;
  margin: auto;
  outline-style: none;
  -ms-transform: scale(0);
  -webkit-transform: scale(0);
  transform: scale(0);
}

.md-button.oppia-foundation-scroll-to-top-button.scrolling {
  -ms-transform: scale(1);
  -webkit-transform: scale(1);
  transform: scale(1);
}

.oppia-foundation-quote-box {
  -webkit-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
  padding: 16px 20px;
}
@media screen and (min-width: 100px) and (max-width: 499px) {
  .oppia-foundation-quote-box {
    max-width: 90vw;
  }
}
@media screen and (min-width: 550px) {
  .oppia-foundation-quote-box {
    width: 50vw;
  }
}

.oppia-foundation-quote-box-overlay {
  bottom: 50px;
  position: relative;
  z-index: 11;
}
@media screen and (min-width: 100px) and (max-width: 999px) {
  .oppia-foundation-quote-box-overlay {
    bottom: 30px;
    margin-left: auto;
    margin-right: auto;
    position: relative;
  }
}

.oppia-foundation-cite-text-box {
  text-align: right; 
  margin-top: 20px;
}

/* Responsive font size on large view width. */
html {
    font-size: 20px;
}
@media(max-width: 1580px) {
  html {
    font-size: 18px;
  }
}
@media(max-width: 980px) {
  html {
    font-size: 16px;
  }
}
 
/*******************************************************************************
Small Device Styles
*******************************************************************************/

@media screen and (max-width: 480px) {
  body {
    font-size: 16px;
  }
  h1 {
    font-size: 28px;
  }
  h2 {
    font-size: 24px;
  }
  h3 {
    font-size: 21px;
  }
  h4 {
    font-size: 18px;
  }
  h5 {
    font-size: 14px;
  }
  h6 {
    font-size: 12px;
  }
  code,
  pre {
    min-width: 320px;
    max-width: 480px;
    font-size: 11px;
  }
}


/*reduce the size of the image for small screen devices*/
@media screen and (max-width: 640px) {
  img {
    width: 100%;
  }
}

/* SMARTPHONES PORTRAIT AND LANDSCAPE */
@media only screen and (max-width: 799px) {
  .main-content {
    padding-top: 130px;
  }

}

/* SMARTPHONES LANDSCAPE */
@media only screen and (max-width : 799px) {
  .main-content {
    width: 100%;
  }

}

/* iPads (portrait and landscape) ----------- */
@media only screen and (min-width : 800px) and (max-width : 1024px) {
  .main-content {
    width: 90%;
  }
}

.active {
  color: #222222;
  /* Disables the link completely instead of just cursor: default; */
  pointer-events: none;
  text-decoration: none;
}

